2012-12-04  pauljohn  <pauljohn@pjlap-124.ku.edu>

	* ../R/mvrnorm.R (rmvnorm): new method to fix mvtnorm package method

2012-12-01  pauljohn  <pauljohn@pjlap-124.ku.edu>

	* ../R/initPortableStreams.R (setStreamCollection): new
	function. Will accept the seed list for one run, does not require
	whole collection.

2012-11-30  pauljohn  <pauljohn@pjlap-124.ku.edu>

	* ../R/initPortableStreams.R (getState): new method to return one
	or all of the states of the random generator.

2012-11-12  pauljohn  <pauljohn@pjlap-124.ku.edu>

	* ../R/mvrnorm.R: new function to address sample size impact on
	output from MASS mvrnorm.

	* ../../buildPackage.sh (VERSION): revising from svn export to use
	the git idiom: 
	mkdir $PACKAGE.gitex
	cd $PACKAGE
	git archive master | tar -x -C ../$PACKAGE.gitex
	..
	This is a bit frustrating, see 	http://stackoverflow.com/questions/160608/how-to-do-a-git-export-like-svn-export

2012-10-30  pauljohn  <pauljohn@pjlap-124.ku.edu>

	* ../R/seedCreator.R (update.portableSeeds): update.portableSeeds
	method added. Scans to existing portableSeeds object, grabs last
	saved stream initializer. Then adds more from there.
	(update.portableSeeds): trying to make this a generic function.

2012-10-24  pauljohn  <pauljohn@pjlap-124.ku.edu>

	* ../R/initPortableStreams.R (useStream): changing verbose
	defaults to FALSE for useSteam and initStreams

	* ../man/portableParallelSeeds-package.Rd (Maintainer): insert
	examples and other boilerplate
