@@ -1,3 +1,8 @@
+2013-05-16  Paul Johnson  <pauljohn@pols110.pols.ku.edu>
+
+	* ../R/mvrnorm.R (mvrnorm): omit the mvtnorm fix. That has been
+	put into mvtnorm package (YAY!)
+
 2012-12-04  pauljohn  <pauljohn@pjlap-124.ku.edu>
 
 	* ../R/mvrnorm.R (rmvnorm): new method to fix mvtnorm package method
